--- a/src/components/Disciplines/Disciplines.scss
+++ b/src/components/Disciplines/Disciplines.scss
@@ -8,7 +8,7 @@
     padding: var(--outer-padding);
     padding-top: toRem(70);
     padding-bottom: toRem(70);
-    background: rgba(0,0,0,.4);
+    background: #191919;
     & > * {
         width: 100%;
         margin-bottom: toRem(50);
