--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,16 +4,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
+    position: fixed;
     width: 100vw;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     padding: var(--outer-padding);
     padding-bottom: 10px;
-    z-index: 10;
-    max-width: var(--outer-width);
-    
+    z-index: 10;    
+    transition: $regular-transition;
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.46) 100%);
 }
 
 .navigation {
