--- a/src/components/ProeficienciesResume/ProeficienciesResume.scss
+++ b/src/components/ProeficienciesResume/ProeficienciesResume.scss
@@ -7,7 +7,7 @@
     &__item {
         display: flex;
         align-items: center;
-        &-icon {
+        svg {
             margin-right: toRem(15);
             path {
                 stroke: none;
