--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,7 +1,7 @@
 @import '../../styles/generics';
 
 .project {
-    height: 100vh;
+    height: 70vh;
     max-width: 100vw;
     position: relative;
     display: flex;
@@ -102,6 +102,19 @@
     }
 }
 
+@media (max-width: 500px) {
+    section.project__images.project__images--desktop,
+    .project__images--responsive,
+    .project__images--mobile {
+        bottom: 0;
+    }
+}
+
+@media (min-width: 500px) {
+    .project {
+        height: 100vh;
+    }
+}
 @media (min-width: 1100px) {
     .project {
         &__images {
