animations on home intro

--- a/src/components/HandScroll/HandScroll.scss
+++ b/src/components/HandScroll/HandScroll.scss
@@ -102,6 +102,7 @@
                 bottom: 50%;
                 right: 50%;
                 transform: translateX(-50%) translateY(-20px);
+                z-index: 9;
             }
         }
     }
