--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -34,7 +34,6 @@
 
 
 }
-
 @media (min-width: 1100px) {
     .home {
         &__projects {
@@ -67,7 +66,6 @@
 
     }
 }
-
 @media (max-width: 1100px) {
     .home .status-scrollbar {
         display: none;
@@ -75,4 +73,171 @@
 }
 ::-webkit-scrollbar {
     display: none;
+}
+
+.home {
+
+    &__intro {
+        &-container {
+            &-title,
+            &-text {
+                position: relative;
+                &::after,
+                &::before {
+                    content: '';
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+                    animation-fill-mode: forwards;
+                }
+                &::after {
+                    background: $blue;
+                    animation-name: block-left-reveal;
+                    z-index: 8;
+                }
+                &::before {
+                    background: white;
+                    opacity: 0;
+                    animation-name: block-left;
+                    z-index: 9;
+                }
+
+            }
+            &-subtitle {
+                animation-fill-mode: forwards;
+                animation-name: fade-left;
+                animation-duration: 1s;
+                animation-delay: 1s;
+                transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+                z-index: 8;
+                opacity: 0;
+            }
+            &-title {
+                &::after,
+                &::before {
+                    animation-duration: 1.75s;
+                    animation-delay: 1.7s;
+                }
+            }
+            
+            &-text {
+                position: relative;
+                &::after,
+                &::before {
+                    animation-duration: 1s;
+                    animation-delay: 5s;
+                }
+            }
+
+            .proeficiencies-resume {
+                &__item {
+                    animation-fill-mode: forwards;
+                    animation-name: fade-left;
+                    animation-duration: 1s;
+                    animation-delay: 3.2s;
+                    transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);;                    
+                    opacity: 0;
+                }
+            }
+        }
+
+        .hand-scroll {
+            &__hand-top,
+            &__hand-bottom,
+            .scroller {
+                animation-fill-mode: forwards;
+                animation-duration: 4s;
+                animation-delay: 7s;
+                transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);;                    
+                opacity: 0;
+            }
+            &__hand-top {
+                animation-name: fade-top;
+            }
+            &__hand-bottom {
+                animation-name: fade-bottom;
+            }
+            .scroller {
+                animation-name: only-fade;
+                animation-delay: 9s;
+            }
+        }
+    }
+}
+
+@keyframes block-left {
+    0% {
+        transform: translateX(-100%);
+        max-width: 100%;
+        opacity: 0;
+    }
+
+    25% {
+        opacity: 1;
+        transform: translateX(-10%);
+        max-width: 100%;
+    }
+    100% {
+        max-width: 0;
+        opacity: 1;
+    }
+}
+
+@keyframes block-left-reveal {
+    0% {
+        max-width: 100%;
+    }
+
+    25% {
+        max-width: 100%;
+    }
+
+    100% {
+        max-width: 0;
+    }
+}
+
+@keyframes fade-left {
+    from {
+        transform: translateX(toRem(50));
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-top {
+    from {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-bottom {
+    from {
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes only-fade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
